--- a/css/main2.css
+++ b/css/main2.css
@@ -101,6 +101,10 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .post-meta { font-size: 14px; color: #000000; }
 
 .post-link { display: block; font-size: 18px; color: #000000;}
+.wrapper3        {width:80%;height:100%;margin:0 auto;background:#CCC}
+.h_iframe        {position:relative;}
+.h_iframe .ratio {display:block;width:100%;height:auto;}
+.h_iframe iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
 
 /** Posts */
 .post-header { margin-bottom: 30px; }
